...
                                            <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                            <font key="font" metaFont="system"/>
                                        </buttonCell>
                                    </button>
                                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="jat-W4-3dQ">
                                        <rect key="frame" x="-2" y="-1" width="80" height="18"/>
                                        <buttonCell key="cell" type="radio" title="Negative" bezelStyle="regularSquare" imagePosition="left" alignment="left" inset="2" id="cai-Vn-DSW">
                                            <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                            <font key="font" metaFont="system"/>
                                        </buttonCell>
                                    </button>
                                </subviews>
                                <visibilityPriorities>
...
                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                </textFieldCell>
                            </textField>
                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="4oC-Gx-nR9">
                                <rect key="frame" x="373" y="13" width="64" height="32"/>
                                <buttonCell key="cell" type="push" title="Save" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="EYw-OL-LBh">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                                <color key="bezelColor" name="AccentColor"/>
                                <connections>
                                    <action selector="saveButtonPressed:" target="bsT-H0-gwk" id="1Zh-If-bgs"/>
...
